force-app/main/default/objects/tdc_tsw__VTM_History__c/fields/tdc_tsw__Contact__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verify The Phone History</relationshipLabel>
    <relationshipName>Verify_The_Email_Phone_History</relationshipName>
    <type>Lookup</type>
</CustomField>