force-app/main/default/objects/tdc_tsw__VTM_History__c/fields/tdc_tsw__Phone__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>