force-app/main/default/objects/tdc_tsw__VTM_History__c/fields/tdc_tsw__Phone_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Phone_Verification_Status__c</fullName>
    <formula>CASE(tdc_tsw__Phone_Verification_Result__c, &apos;Valid&apos;, IMAGE(&apos;/resource/1571315899000/tdc_tsw__resource_sms_file/img/ValidPhone.png&apos;, &apos;Valid&apos;), 
&apos;Invalid&apos;,IMAGE(&apos;/resource/1571315899000/tdc_tsw__resource_sms_file/img/InvalidPhone.png&apos;,&apos;Invalid&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Verification Status</label>
    <type>Text</type>
</CustomField>