force-app/main/default/objects/tdc_tsw__VTM_History__c/fields/tdc_tsw__RelatedObjectId__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__RelatedObjectId__c</fullName>
    <label>Related Object Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>